# underwrite-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  telemetry.py
backend/app/agents/: __init__.py  graph.py  report.py  risk.py
backend/app/api/: cases.py  eval.py  health.py  workflow.py
backend/app/db/: __init__.py  init_db.py  models.py  session.py
backend/app/eval/: __init__.py  deepeval_runner.py  dspy_program.py  ragas_eval.py
backend/app/geo/: __init__.py  comp_search.py  geocoder.py
backend/app/ingestion/: __init__.py  canadian_market.py  market_loader.py  pdf_parser.py  pipeline.py
backend/app/llm/: provider.py
backend/app/ml/: __init__.py  features.py  predict.py  ranker.py  train.py
backend/app/retrieval/: __init__.py  embeddings.py  qdrant_store.py  reranker.py
backend/app/schemas/: __init__.py  case.py
backend/app/services/: health.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: seed_data.py  train_ranker.py
backend/tests/: test_canadian_market.py  test_eval.py  test_health.py  test_risk.py  test_schemas.py
data/: sample_market.csv
data/46100057-eng/: 46100057_MetaData.csv
deploy/k8s/: README.md  api.yaml  configmap.yaml  frontend.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml  secret.example.yaml  worker.yaml
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
evals/: README.md  run_eval.py  underwriting_eval_cases.json
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cases/[id]/: page.tsx
frontend/src/app/cases/new/: page.tsx
frontend/src/components/: CompMap.tsx
frontend/src/lib/: api.ts
mlops/: README.md  evidently_drift.py
reports/: eval_matrix.csv  eval_results.json  eval_summary.md
