[project]
name = "real-estate-underwriting"
version = "0.1.0"
description = "Agentic Real Estate Underwriting AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "geoalchemy2>=0.15.2",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "pymupdf>=1.24.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "sentence-transformers>=3.3.0",
    "fastembed>=0.4.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "google-cloud-aiplatform>=1.74.0",
    "pillow>=11.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "ultralytics>=8.3.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "ragas>=0.2.0",
    "deepeval>=1.5.0",
    "dspy>=2.5.0",
    "geopy>=2.4.0",
    "python-jose>=3.3.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
